--- a/Formaccess.html
+++ b/Formaccess.html
@@ -29,7 +29,7 @@
 
   const SHAREPOINT_HOSTNAME = 'smartinfrastructure.sharepoint.com';
   const SITE_PATH = 'teams/Pool_Vehicles2';
-  const LIST_NAME = 'Approved_Drivers';
+  const LIST_NAME = 'Approved_Driver_List';
 
   const msalInstance = new msal.PublicClientApplication(msalConfig);
 
