--- a/Formaccess.html
+++ b/Formaccess.html
@@ -20,7 +20,8 @@
     auth: {
       clientId: 'd13c0cca-d75f-4bc9-8dcb-b18315c40d0e',
       authority: 'https://login.microsoftonline.com/a456fbc2-921d-42a4-a7a8-fc0f343ede61',
-      redirectUri: window.location.href
+      redirectUri: redirectUri: 'https://erpadmin0684.github.io/PoolVehicles/Formaccess.html'
+
     },
     cache: {
       cacheLocation: 'localStorage' // Use localStorage instead of sessionStorage for better persistence
